tests/snapshots/examples_fixtures/suggestions__global_scope.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/suggestions/global_scope.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E004]: UNDEFINED VARIABLE

I can't find a value named `totalCoun`.

  --> examples/suggestions/global_scope.flx:8:7
  |
8 | print(totalCoun);
  |       ^^^^^^^^^

Hint:
  Define it first: let totalCoun = ...;


Help:
  Did you mean one of: `totalCount`, `totalAmount`?
== stdout ==
<not executed>
